--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <!-- The file upload form used as target for the file upload widget -->
       <form
         id="fileupload"
-        action="https://jquery-file-upload.appspot.com/"
+        action="https://fcasfs-of.github.io/server-free/server/"
         method="POST"
         enctype="multipart/form-data"
       >
