--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
 <!--
 /*
- * jQuery File Upload Demo
- * https://github.com/blueimp/jQuery-File-Upload
- *
- * Copyright 2010, Sebastian Tschan
- * https://blueimp.net
- *
- * Licensed under the MIT license:
- * https://opensource.org/licenses/MIT
- */
+*/
 -->
 <html lang="en">
   <head>
@@ -86,7 +78,7 @@
       <!-- The file upload form used as target for the file upload widget -->
       <form
         id="fileupload"
-        action="https://fcasfs-of.github.io/server-free/server/"
+        action="https://fcasfs-of.github.io/"
         method="POST"
         enctype="multipart/form-data"
       >
