--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Fine Uploader JS file
     ====================================================================== -->
-    <script src="fine-uploader.js"></script>
+    <script src="azure.fine-uploader.js"></script>
 
     <!-- Fine Uploader Gallery template
     ====================================================================== -->
