--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
     <!-- Fine Uploader Gallery template
     ====================================================================== -->
     <script type="text/template" id="qq-template-gallery">
-        <div class="qq-uploader-selector qq-uploader qq-gallery" qq-drop-area-text="Drop files here">
+    </script>
+
+    <title>Fine Uploader Gallery View Demo</title>
+</head>
+<body>
+    <!-- Fine Uploader DOM Element
+    ====================================================================== -->
+    <div id="fine-uploader-gallery">
+            <div class="qq-uploader-selector qq-uploader qq-gallery" qq-drop-area-text="Drop files here">
             <div class="qq-total-progress-bar-container-selector qq-total-progress-bar-container">
                 <div role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" class="qq-total-progress-bar-selector qq-progress-bar qq-total-progress-bar"></div>
             </div>
@@ -89,14 +97,8 @@
                 </div>
             </dialog>
         </div>
-    </script>
 
-    <title>Fine Uploader Gallery View Demo</title>
-</head>
-<body>
-    <!-- Fine Uploader DOM Element
-    ====================================================================== -->
-    <div id="fine-uploader-gallery"></div>
+    </div>
 
     <!-- Your code to create an instance of Fine Uploader and bind to the DOM/template
     ====================================================================== -->
